# domain-finder

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/domain_finder/: __init__.py  cache.py  config.py  logger.py  main.py
src/domain_finder/checker/: whois.py
src/domain_finder/llm/: provider_base.py
src/domain_finder/llm/providers/: ollama_provider.py  openrouter_provider.py
src/domain_finder/web/: app.py
src/domain_finder/web/static/assets/fonts/FiraCode/: README.txt
src/domain_finder/web/static/css/: app.css  styles.css  ui.css
src/domain_finder/web/static/js/: app.js
src/domain_finder/web/templates/: index.html
