[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-finder"
version = "1.0.0"
description = "LLM agent for finding available domains"
requires-python = ">=3.11"
dependencies = [
    "python-whois>=0.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
domain-finder = "domain_finder.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_finder"]